--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Some of the material in this lab was copied from the solution at https://github.com/learn-co-curriculum/dsc-object-oriented-attributes-with-functions-lab/tree/solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Object Oriented Attributes With Functions - Lab\n",
     "\n",
     "## Introduction\n",
@@ -50,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from school import School"
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "school.sort_roster()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -242,13 +260,13 @@
        " 11: ['Bethany Hamilton']}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "school.sort_roster()"
+    "school.roster"
    ]
   },
   {
@@ -276,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
